--- a/app/src/main/res/layout/activity_appbar.xml
+++ b/app/src/main/res/layout/activity_appbar.xml
@@ -63,6 +63,21 @@
                     android:text="@string/app_name"
                     android:textSize="12sp" />
             </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_blue_bright"
+                >
+
+                <TextView
+                    android:id="@+id/tv_time2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="center_vertical"
+                    android:text="1233333"
+                    android:textSize="12sp" />
+            </RelativeLayout>
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipe"
                 android:layout_width="match_parent"
