--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="列表滑动顶部悬浮"/>
-
+    <Button
+        android:id="@+id/viewbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="view事件传递机制"/>
 </LinearLayout>
