--- a/app/src/main/res/layout/activity_appbar.xml
+++ b/app/src/main/res/layout/activity_appbar.xml
@@ -1,12 +1,18 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lin"
+    android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    >
 
-
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/lin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <android.support.design.widget.AppBarLayout
         android:id="@+id/applayout"
         android:layout_width="match_parent"
@@ -22,7 +28,7 @@
             android:padding="0dp"
             >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -44,7 +50,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
@@ -78,10 +84,7 @@
                     android:text="1233333"
                     android:textSize="12sp" />
             </RelativeLayout>
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipe"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/feed_list"
@@ -89,7 +92,6 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/white"
                     android:scrollbars="vertical" />
-            </android.support.v4.widget.SwipeRefreshLayout>
 
 
         </LinearLayout>
@@ -98,3 +100,4 @@
     </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
